--- a/main.html
+++ b/main.html
@@ -5,33 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quote Generator</title>
    <link rel="stylesheet" href="style.css"> 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Indie+Flower&display=swap" rel="stylesheet">
+    
 </head>
 <body>
 
 <div class="container" id="quoteContainer">
+  <header>Quotes Of The Day</header>
   <select id="categoryDropdown">
     <option value="science">Science</option>
     <option value="motivational">Motivational</option>
-    <option value="sprituial">Sprituial</option>
+    <option value="sprituial">Spiritual</option>
     <option value="wisdom">Wisdom</option>
   </select>
-
+  <div class="quote" id="quoteDisplay">
+    Loading...
+  </div> 
   <div>
     <button onclick="prevQuote()">Previous</button>
     <button onclick="nextQuote()">Next</button>
     <button onclick="randomQuote()">Random</button>
   </div>
-
-  <label for="darkModeSwitch">Dark Mode</label>
-  <input type="checkbox" id="darkModeSwitch" onclick="toggleDarkMode()">
-
+  <br>
+  <!-- <img src="night.avif" class="img-container"> -->
+  <div class="fonts">
+    <label for="darkModeSwitch">Dark Mode</label>
+    <input type="checkbox" id="darkModeSwitch" onclick="toggleDarkMode()">
+  </div>
   <label for="fontSizeRange">Font Size</label>
   <input type="range" id="fontSizeRange" min="14" max="24" step="2" value="18" oninput="changeFontSize(this.value)">
-
-  <div class="quote" id="quoteDisplay">
-    Loading...
-  </div> 
-
   <script src="script.js"></script>
 </div>
 
