changes in darkmode functionality

--- a/main.html
+++ b/main.html
@@ -35,7 +35,12 @@
     <input type="checkbox" id="darkModeSwitch" onclick="toggleDarkMode()">
   </div>
   <label for="fontSizeRange">Font Size</label>
-  <input type="range" id="fontSizeRange" min="14" max="24" step="2" value="18" oninput="changeFontSize(this.value)">
+  <input type="range" id="fontSizeRange" 
+     min="14" 
+     max="24" 
+     step="2" 
+     value="18" 
+     oninput="changeFontSize(this.value)">
   <script src="script.js"></script>
 </div>
 
