--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   </div>
   <br>
   <!-- <img src="night.avif" class="img-container"> -->
-  <div class="fonts">
+  <div class="fontset">
     <label for="darkModeSwitch">Dark Mode</label>
     <input type="checkbox" id="darkModeSwitch" onclick="toggleDarkMode()">
-  </div>
+  <br>
   <label for="fontSizeRange">Font Size</label>
   <input type="range" id="fontSizeRange" 
      min="14" 
@@ -41,6 +41,7 @@
      step="2" 
      value="18" 
      oninput="changeFontSize(this.value)">
+  </div>
   <script src="script.js"></script>
 </div>
 
